Fix race condition
See merge request main/Sumatra!2097

sumatra-commit: 22c8ec4c09b21dcbe7a78393ffbb688128fb1682